Start v2.2.28 Fix scrollbar being blocked by oversized button height

--- a/src/app/postybirb/layouts/postybirb-layout/postybirb-layout.component.scss
+++ b/src/app/postybirb/layouts/postybirb-layout/postybirb-layout.component.scss
@@ -72,7 +72,7 @@
   z-index: 100;
   display: flex;
   flex-direction: row-reverse;
-  height: 0px;
+  height: 0px !important;
 
   button {
     opacity: 0.9;
